--- a/0308.md
+++ b/0308.md
@@ -1,7 +1,7 @@
 # 소수 구하기
 
-1. Brute Force: n이 주어졌을 때 n을  2부터 n - 1까지의 모든 수로 나누어 보는 것 
-**시간복잡도 O(n)**
+1. Brute Force: n이 주어졌을 때 n을  2부터 n - 1까지의 모든 수로 나누어 보는 것 </br>
+`시간복잡도 O(n)`
     
     ```python
     def is_prime_number(n):
@@ -23,8 +23,8 @@
     
 2. n의 약수는 1 ~ √n 의 범위 내에 존재 → n을 2 ~ √n 까지 확인했을 때 나누어 떨어지지 않으면 소수
 EX) 16 = 1 × 16 = 2 × 8 = 4 × 4 = 8 × 2 = 16 × 1 → 약수끼리의 곱은 제곱근을 기준으로 대칭
-       ∴ √16 = 4 까지 나누었을 때, 2와 4로 나누어 떨어지므로 수가 아니다
-**시간복잡도 O(√n)**
+       ∴ √16 = 4 까지 나누었을 때, 2와 4로 나누어 떨어지므로 수가 아니다 </br>
+`시간복잡도 O(√n)`
     
     ```python
     def is_prime_number(n):
@@ -36,8 +36,8 @@ EX) 16 = 1 × 16 = 2 × 8 = 4 × 4 = 8 × 2 = 16 × 1 → 약수끼리의 곱은
         return True
     ```
     
-3. Sieve of Eratosthenes(에라토스테네스의 채) - 1부터 어떤 수 n까지의 범위에서 소수들을 찾는 방법
-**시간복잡도 O(nloglogn)**
+3. Sieve of Eratosthenes(에라토스테네스의 채) - 1부터 어떤 수 n까지의 범위에서 소수들을 찾는 방법 </br> 
+`시간복잡도 O(nloglogn)`
     
     ```python
     def sieve_of_eratosthenes(n):
@@ -51,7 +51,7 @@ EX) 16 = 1 × 16 = 2 × 8 = 4 × 4 = 8 × 2 = 16 × 1 → 약수끼리의 곱은
             # prime[p]가 소수이면 
             if (primes[p] == True):
                 # prime[p]의 배수 모두 False로
-    						# p * p 인 이유는 p * 2 ~ p * (p-1)은 이전 p에서 제거되었기 때문
+    			# p * p 인 이유는 p * 2 ~ p * (p-1)은 이전 p에서 제거되었기 때문
                 for i in range(p * p, n+1, p):
                     primes[i] = False
             p += 1
