--- a/0319.md
+++ b/0319.md
@@ -13,7 +13,7 @@
 - 기준: 기계에 독립적인 문제 본연의 복잡도를 표현
 
  
-> 단위연산 (basic operation) : 비교문(comparison), 지정문(assignment) 등
+> 단위연산 (basic operation) : 비교문(comparison), 지정문(assignment) 등 </br>
 > 입력크기 (input size) : 배열의 크기, 리스트의 길이, 행렬 - 행과 열의 크기, 트리 - 마디와 이음선의 수, 노드 개수 등
 
 ## 분석방법
@@ -41,5 +41,5 @@
 - 단위연산이 수행되는 획수가 최소인 경우 선택 (ex. 순차검색 - 처음에 발견하는 경우)
 
 
-> 비내림차순(비오름차순) vs 오름차순(내림차순)
+> 비내림차순(비오름차순) vs 오름차순(내림차순) </br>
 > 비____ : 데이터 중복 허용 (ex. 1 2 3 3 4)
