--- a/0411.md
+++ b/0411.md
@@ -20,19 +20,12 @@ FUNCTION_NAME[(arg1, arg2, ...)]
 | UPPER(column \| expression) | 문자열을 대문자로 변환 |
 | INITCAP(column \| expression) | 문자열의 첫글자 = 대문자, 나머지 = 소문자로 변환 |
 | CONCAT(column1 \| expression1, column2 \| expression2) | 두 문자열을 연결 (= \|\|), Concatenation |
-| 
-SUBSTR(column \| expression, m[, n]) | m과 n 사이에 있는 문자열만 반환
-(m = 음수 → 문자열의 끝에서 시작)
-(n을 생략 → 문자열 끝까지 모두 반환) |
+| SUBSTR(column \| expression, m[, n]) | m과 n 사이에 있는 문자열만 반환</br> (m = 음수 → 문자열의 끝에서 시작)</br> (n을 생략 → 문자열 끝까지 모두 반환) |
 | LENGTH(column \| expression) | 표현식에서 문자의 갯수를 반환 |
-| INSTR(column \| expression, ‘string’, [, m], [n]) | 문자열에서 string의 위치를 반환
-(m → 탐색 시작점, n → n번째 탐색을 반환) |
-| LPAD(column \| expression, n, ‘string’)
- RPAD(column \| expression, n, ‘string’) | n의 자릿수를 가진 문자열 형태로 오른쪽 정렬
-n의 자릿수를 가진 문자열 형태로 왼쪽 정렬 |
+| INSTR(column \| expression, ‘string’, [, m], [n]) | 문자열에서 string의 위치를 반환</br> (m → 탐색 시작점, n → n번째 탐색을 반환) |
+| LPAD(column \| expression, n, ‘string’)</br> RPAD(column \| expression, n, ‘string’) | n의 자릿수를 가진 문자열 형태로 오른쪽 정렬</br> n의 자릿수를 가진 문자열 형태로 왼쪽 정렬 |
 | TRIM(leading \| trailing \| both trim_character FROM trim_source) | 문자열에서 첫 문자, 마지막 문자(또는 모두) 정리 |
-| REPLACE(text, search_string, replacement_string) | 문자열에서 찾고자하는 text 탐색 
-→ 존재 시, replacement_string으로 변환 |
+| REPLACE(text, search_string, replacement_string) | 문자열에서 찾고자하는 text 탐색</br>→ 존재 시, replacement_string으로 변환 |
 
 | FUNCTION | RESULT | FUNCTION | RESULT |
 | --- | --- | --- | --- |
@@ -59,11 +52,9 @@ WHERE SUBSTR(LAST_NAME, -1, 1) = 'n'; -- 문자열 맨 뒤의 단어 = 'n'
 
 | FUNCTION | PURPOSE |
 | --- | --- |
-| ROUND(column \| expression, n) | column, expression 또는 값에 대해 소수점 n번째 자리에서 반올림
-(n 생략 → 소수점 표시 X) |
-| TRUNC(column \| expression, n) | column, expression 또는 값에 대해 소수점 n번째 자리의 나머지는 버림
-(n 생략 → n의 default value = 0) |
-| MOD(m, n) \| m을 n으로 나눈 나머지 반환 |
+| ROUND(column \| expression, n) | column, expression 또는 값에 대해 소수점 n번째 자리에서 반올림</br> (n 생략 → 소수점 표시 X) |
+| TRUNC(column \| expression, n) | column, expression 또는 값에 대해 소수점 n번째 자리의 나머지는 버림</br> (n 생략 → n의 default value = 0) |
+| MOD(m, n) | m을 n으로 나눈 나머지 반환 |
 
 | FUNCTION | RESULT | FUNCTION | RESULT |
 | --- | --- | --- | --- |
